crates/balerix-runtime/tests/snapshots/generated_golden__payments_alice_deny.snap
---
source: crates/balerix-runtime/tests/generated_golden.rs
expression: out
---
==== nono-profile.json ====
{
  "environment": {
    "deny_vars": [
      "*"
    ],
    "set_vars": {
      "BALERIX_AGENT": "alice",
      "BALERIX_AGENT_ID": "payments/backend/alice",
      "BALERIX_API_URL": "http://127.0.0.1:7643",
      "BALERIX_CREW": "backend",
      "BALERIX_FLEET": "payments",
      "BALERIX_HOOK_SECRET": "secret-alice",
      "CLAUDE_CODE_TMPDIR": "<root>/state/fleets/payments/crews/backend/agents/alice/home/tmp",
      "CLAUDE_CONFIG_DIR": "<root>/state/fleets/payments/crews/backend/agents/alice/home/.claude",
      "COLORTERM": "truecolor",
      "GH_CONFIG_DIR": "<root>/state/fleets/payments/crews/backend/agents/alice/home/.config/gh",
      "HOME": "<root>/state/fleets/payments/crews/backend/agents/alice/home",
      "MISE_AUTO_INSTALL": "false",
      "MISE_CACHE_DIR": "<root>/state/fleets/payments/crews/backend/agents/alice/home/.cache/mise",
      "MISE_CEILING_PATHS": "<root>/state/fleets/payments/crews/backend/agents/alice",
      "MISE_CONFIG_DIR": "<root>/state/fleets/payments/crews/backend/agents/alice/home/.config/mise",
      "MISE_DATA_DIR": "<root>/state/fleets/payments/crews/backend/agents/alice/home/.local/share/mise",
      "MISE_GLOBAL_CONFIG_FILE": "<root>/state/fleets/payments/crews/backend/agents/alice/mise.toml",
      "MISE_SHARED_INSTALL_DIRS": "<root>/state/fleets/payments/crews/backend/mise/installs:<root>/state/fleets/payments/mise/installs:<root>/data/mise/installs",
      "MISE_STATE_DIR": "<root>/state/fleets/payments/crews/backend/agents/alice/home/.local/state/mise",
      "RUST_LOG": "info",
      "TERM": "tmux-256color",
      "TMPDIR": "<root>/state/fleets/payments/crews/backend/agents/alice/home/tmp",
      "XDG_CACHE_HOME": "<root>/state/fleets/payments/crews/backend/agents/alice/home/.cache",
      "XDG_CONFIG_HOME": "<root>/state/fleets/payments/crews/backend/agents/alice/home/.config",
      "XDG_DATA_HOME": "<root>/state/fleets/payments/crews/backend/agents/alice/home/.local/share",
      "XDG_STATE_HOME": "<root>/state/fleets/payments/crews/backend/agents/alice/home/.local/state"
    }
  },
  "filesystem": {
    "allow": [
      "<root>/state/fleets/payments/crews/backend/agents/alice/home",
      "<root>/state/fleets/payments/crews/backend/agents/alice/workspace"
    ],
    "read": [
      "/usr",
      "/lib",
      "/lib64",
      "/bin",
      "/etc",
      "<root>/state/fleets/payments/crews/backend/mise",
      "<root>/state/fleets/payments/mise",
      "<root>/data/mise",
      "<root>/state/fleets/payments/crews/backend/agents/alice/mise.toml",
      "/tools/balerix",
      "/tools/mise",
      "<root>/state/fleets/payments/crews/backend/repo/.git/objects"
    ]
  },
  "meta": {
    "description": "generated by balerix for payments/backend/alice",
    "name": "balerix-payments-backend-alice"
  },
  "network": {
    "block": false,
    "open_port": [
      7643
    ]
  },
  "platform_overrides": {
    "linux": {
      "security": {
        "signal_mode": "isolated"
      }
    },
    "macos": {
      "security": {
        "signal_mode": "isolated"
      }
    }
  },
  "security": {
    "signal_mode": "isolated"
  },
  "workdir": {
    "access": "none"
  }
}
==== launch.sh ====
#!/bin/sh
# generated by balerix — safe to run by hand
exec env -i HOME='<root>/state/fleets/payments/crews/backend/agents/alice/nono' PATH='/usr/local/bin:/usr/bin:/bin:/tools' \
  '/tools/balerix' 'agent-supervise' '--' '/tools/nono' '-s' '--log-file' '<root>/state/fleets/payments/crews/backend/agents/alice/logs/nono.log' 'run' '--profile' '<root>/state/fleets/payments/crews/backend/agents/alice/nono-profile.json' '--' '/tools/balerix' 'sandbox-exec' '--' '/tools/mise' 'exec' '--' 'claude' '--verbose'
