crates/balerix-runtime/tests/snapshots/generated_golden__payments_generated.snap
---
source: crates/balerix-runtime/tests/generated_golden.rs
expression: out
---
==== payments/backend/alice settings.json ====
{
  "hooks": {
    "Notification": [
      {
        "hooks": [
          {
            "headers": {
              "Authorization": "Bearer secret-alice"
            },
            "type": "http",
            "url": "http://127.0.0.1:7643/v1/agents/payments/backend/alice/events"
          }
        ]
      }
    ],
    "PostToolUse": [
      {
        "hooks": [
          {
            "headers": {
              "Authorization": "Bearer secret-alice"
            },
            "type": "http",
            "url": "http://127.0.0.1:7643/v1/agents/payments/backend/alice/events"
          }
        ]
      }
    ],
    "PreCompact": [
      {
        "hooks": [
          {
            "headers": {
              "Authorization": "Bearer secret-alice"
            },
            "type": "http",
            "url": "http://127.0.0.1:7643/v1/agents/payments/backend/alice/events"
          }
        ]
      }
    ],
    "PreToolUse": [
      {
        "hooks": [
          {
            "headers": {
              "Authorization": "Bearer secret-alice"
            },
            "type": "http",
            "url": "http://127.0.0.1:7643/v1/agents/payments/backend/alice/events"
          }
        ]
      }
    ],
    "SessionEnd": [
      {
        "hooks": [
          {
            "headers": {
              "Authorization": "Bearer secret-alice"
            },
            "type": "http",
            "url": "http://127.0.0.1:7643/v1/agents/payments/backend/alice/events"
          }
        ]
      }
    ],
    "SessionStart": [
      {
        "hooks": [
          {
            "command": "'/tools/balerix' hook-relay",
            "timeout": 10,
            "type": "command"
          }
        ]
      }
    ],
    "Stop": [
      {
        "hooks": [
          {
            "headers": {
              "Authorization": "Bearer secret-alice"
            },
            "type": "http",
            "url": "http://127.0.0.1:7643/v1/agents/payments/backend/alice/events"
          }
        ]
      }
    ],
    "SubagentStop": [
      {
        "hooks": [
          {
            "headers": {
              "Authorization": "Bearer secret-alice"
            },
            "type": "http",
            "url": "http://127.0.0.1:7643/v1/agents/payments/backend/alice/events"
          }
        ]
      }
    ],
    "UserPromptSubmit": [
      {
        "hooks": [
          {
            "headers": {
              "Authorization": "Bearer secret-alice"
            },
            "type": "http",
            "url": "http://127.0.0.1:7643/v1/agents/payments/backend/alice/events"
          }
        ]
      }
    ]
  },
  "model": "sonnet",
  "permissions": {
    "allow": [
      "Bash(git *)"
    ]
  }
}
==== payments/backend/alice .gitconfig ====
# generated by balerix for payments/backend/alice
[user]
	name = payments/backend/alice
	email = alice@backend.payments.balerix.invalid
[credential]
	helper = 
	helper = !gh auth git-credential

==== payments/backend/alice mise.toml ====
# generated by balerix for agent payments/backend/alice; edit the fleet file, not this
[tools]
claude = "2.1.0"
gh = "2.100.0"
node = "22.11.0"
python = "3.12.8"

==== payments/backend/alice nono-profile.json ====
{
  "environment": {
    "deny_vars": [
      "*"
    ],
    "set_vars": {
      "BALERIX_AGENT": "alice",
      "BALERIX_AGENT_ID": "payments/backend/alice",
      "BALERIX_API_URL": "http://127.0.0.1:7643",
      "BALERIX_CREW": "backend",
      "BALERIX_FLEET": "payments",
      "BALERIX_HOOK_SECRET": "secret-alice",
      "CLAUDE_CODE_TMPDIR": "<root>/state/fleets/payments/crews/backend/agents/alice/home/tmp",
      "CLAUDE_CONFIG_DIR": "<root>/state/fleets/payments/crews/backend/agents/alice/home/.claude",
      "COLORTERM": "truecolor",
      "GH_CONFIG_DIR": "<root>/state/fleets/payments/crews/backend/agents/alice/home/.config/gh",
      "HOME": "<root>/state/fleets/payments/crews/backend/agents/alice/home",
      "MISE_AUTO_INSTALL": "false",
      "MISE_CACHE_DIR": "<root>/state/fleets/payments/crews/backend/agents/alice/home/.cache/mise",
      "MISE_CEILING_PATHS": "<root>/state/fleets/payments/crews/backend/agents/alice",
      "MISE_CONFIG_DIR": "<root>/state/fleets/payments/crews/backend/agents/alice/home/.config/mise",
      "MISE_DATA_DIR": "<root>/state/fleets/payments/crews/backend/agents/alice/home/.local/share/mise",
      "MISE_GLOBAL_CONFIG_FILE": "<root>/state/fleets/payments/crews/backend/agents/alice/mise.toml",
      "MISE_SHARED_INSTALL_DIRS": "<root>/state/fleets/payments/crews/backend/mise/installs:<root>/state/fleets/payments/mise/installs:<root>/data/mise/installs",
      "MISE_STATE_DIR": "<root>/state/fleets/payments/crews/backend/agents/alice/home/.local/state/mise",
      "RUST_LOG": "info",
      "TERM": "tmux-256color",
      "TMPDIR": "<root>/state/fleets/payments/crews/backend/agents/alice/home/tmp",
      "XDG_CACHE_HOME": "<root>/state/fleets/payments/crews/backend/agents/alice/home/.cache",
      "XDG_CONFIG_HOME": "<root>/state/fleets/payments/crews/backend/agents/alice/home/.config",
      "XDG_DATA_HOME": "<root>/state/fleets/payments/crews/backend/agents/alice/home/.local/share",
      "XDG_STATE_HOME": "<root>/state/fleets/payments/crews/backend/agents/alice/home/.local/state"
    }
  },
  "filesystem": {
    "allow": [
      "<root>/state/fleets/payments/crews/backend/agents/alice/home",
      "<root>/state/fleets/payments/crews/backend/agents/alice/workspace"
    ],
    "read": [
      "/usr",
      "/lib",
      "/lib64",
      "/bin",
      "/etc",
      "<root>/state/fleets/payments/crews/backend/mise",
      "<root>/state/fleets/payments/mise",
      "<root>/data/mise",
      "<root>/state/fleets/payments/crews/backend/agents/alice/mise.toml",
      "/tools/balerix",
      "/tools/mise",
      "<root>/state/fleets/payments/crews/backend/repo/.git/objects"
    ]
  },
  "meta": {
    "description": "generated by balerix for payments/backend/alice",
    "name": "balerix-payments-backend-alice"
  },
  "network": {
    "block": false,
    "open_port": [
      7643
    ]
  },
  "platform_overrides": {
    "linux": {
      "security": {
        "signal_mode": "isolated"
      }
    },
    "macos": {
      "security": {
        "signal_mode": "isolated"
      }
    }
  },
  "security": {
    "signal_mode": "isolated"
  },
  "workdir": {
    "access": "none"
  }
}
==== payments/backend/alice launch.sh ====
#!/bin/sh
# generated by balerix — safe to run by hand
exec env -i HOME='<root>/state/fleets/payments/crews/backend/agents/alice/nono' PATH='/usr/local/bin:/usr/bin:/bin:/tools' \
  '/tools/balerix' 'agent-supervise' '--' '/tools/nono' '-s' '--log-file' '<root>/state/fleets/payments/crews/backend/agents/alice/logs/nono.log' 'run' '--profile' '<root>/state/fleets/payments/crews/backend/agents/alice/nono-profile.json' '--' '/tools/mise' 'exec' '--' 'claude' '--verbose'

==== payments/backend/bob settings.json ====
{
  "hooks": {
    "Notification": [
      {
        "hooks": [
          {
            "headers": {
              "Authorization": "Bearer secret-bob"
            },
            "type": "http",
            "url": "http://127.0.0.1:7643/v1/agents/payments/backend/bob/events"
          }
        ]
      }
    ],
    "PostToolUse": [
      {
        "hooks": [
          {
            "headers": {
              "Authorization": "Bearer secret-bob"
            },
            "type": "http",
            "url": "http://127.0.0.1:7643/v1/agents/payments/backend/bob/events"
          }
        ]
      }
    ],
    "PreCompact": [
      {
        "hooks": [
          {
            "headers": {
              "Authorization": "Bearer secret-bob"
            },
            "type": "http",
            "url": "http://127.0.0.1:7643/v1/agents/payments/backend/bob/events"
          }
        ]
      }
    ],
    "PreToolUse": [
      {
        "hooks": [
          {
            "headers": {
              "Authorization": "Bearer secret-bob"
            },
            "type": "http",
            "url": "http://127.0.0.1:7643/v1/agents/payments/backend/bob/events"
          }
        ]
      }
    ],
    "SessionEnd": [
      {
        "hooks": [
          {
            "headers": {
              "Authorization": "Bearer secret-bob"
            },
            "type": "http",
            "url": "http://127.0.0.1:7643/v1/agents/payments/backend/bob/events"
          }
        ]
      }
    ],
    "SessionStart": [
      {
        "hooks": [
          {
            "command": "'/tools/balerix' hook-relay",
            "timeout": 10,
            "type": "command"
          }
        ]
      }
    ],
    "Stop": [
      {
        "hooks": [
          {
            "headers": {
              "Authorization": "Bearer secret-bob"
            },
            "type": "http",
            "url": "http://127.0.0.1:7643/v1/agents/payments/backend/bob/events"
          }
        ]
      }
    ],
    "SubagentStop": [
      {
        "hooks": [
          {
            "headers": {
              "Authorization": "Bearer secret-bob"
            },
            "type": "http",
            "url": "http://127.0.0.1:7643/v1/agents/payments/backend/bob/events"
          }
        ]
      }
    ],
    "UserPromptSubmit": [
      {
        "hooks": [
          {
            "headers": {
              "Authorization": "Bearer secret-bob"
            },
            "type": "http",
            "url": "http://127.0.0.1:7643/v1/agents/payments/backend/bob/events"
          }
        ]
      }
    ]
  },
  "model": "opus",
  "permissions": {
    "allow": [
      "Bash(git *)"
    ]
  }
}
==== payments/backend/bob .gitconfig ====
# generated by balerix for payments/backend/bob
[user]
	name = payments/backend/bob
	email = bob@backend.payments.balerix.invalid
[credential]
	helper = 
	helper = !gh auth git-credential

==== payments/backend/bob mise.toml ====
# generated by balerix for agent payments/backend/bob; edit the fleet file, not this
[tools]
claude = "2.1.0"
gh = "2.100.0"
node = "22.11.0"
python = "3.12.8"

==== payments/backend/bob nono-profile.json ====
{
  "environment": {
    "deny_vars": [
      "*"
    ],
    "set_vars": {
      "BALERIX_AGENT": "bob",
      "BALERIX_AGENT_ID": "payments/backend/bob",
      "BALERIX_API_URL": "http://127.0.0.1:7643",
      "BALERIX_CREW": "backend",
      "BALERIX_FLEET": "payments",
      "BALERIX_HOOK_SECRET": "secret-bob",
      "CLAUDE_CODE_TMPDIR": "<root>/state/fleets/payments/crews/backend/agents/bob/home/tmp",
      "CLAUDE_CONFIG_DIR": "<root>/state/fleets/payments/crews/backend/agents/bob/home/.claude",
      "COLORTERM": "truecolor",
      "GH_CONFIG_DIR": "<root>/state/fleets/payments/crews/backend/agents/bob/home/.config/gh",
      "HOME": "<root>/state/fleets/payments/crews/backend/agents/bob/home",
      "MISE_AUTO_INSTALL": "false",
      "MISE_CACHE_DIR": "<root>/state/fleets/payments/crews/backend/agents/bob/home/.cache/mise",
      "MISE_CEILING_PATHS": "<root>/state/fleets/payments/crews/backend/agents/bob",
      "MISE_CONFIG_DIR": "<root>/state/fleets/payments/crews/backend/agents/bob/home/.config/mise",
      "MISE_DATA_DIR": "<root>/state/fleets/payments/crews/backend/agents/bob/home/.local/share/mise",
      "MISE_GLOBAL_CONFIG_FILE": "<root>/state/fleets/payments/crews/backend/agents/bob/mise.toml",
      "MISE_SHARED_INSTALL_DIRS": "<root>/state/fleets/payments/crews/backend/mise/installs:<root>/state/fleets/payments/mise/installs:<root>/data/mise/installs",
      "MISE_STATE_DIR": "<root>/state/fleets/payments/crews/backend/agents/bob/home/.local/state/mise",
      "RUST_LOG": "info",
      "TERM": "tmux-256color",
      "TMPDIR": "<root>/state/fleets/payments/crews/backend/agents/bob/home/tmp",
      "XDG_CACHE_HOME": "<root>/state/fleets/payments/crews/backend/agents/bob/home/.cache",
      "XDG_CONFIG_HOME": "<root>/state/fleets/payments/crews/backend/agents/bob/home/.config",
      "XDG_DATA_HOME": "<root>/state/fleets/payments/crews/backend/agents/bob/home/.local/share",
      "XDG_STATE_HOME": "<root>/state/fleets/payments/crews/backend/agents/bob/home/.local/state"
    }
  },
  "filesystem": {
    "allow": [
      "<root>/state/fleets/payments/crews/backend/agents/bob/home",
      "<root>/state/fleets/payments/crews/backend/agents/bob/workspace"
    ],
    "read": [
      "/usr",
      "/lib",
      "/lib64",
      "/bin",
      "/etc",
      "<root>/state/fleets/payments/crews/backend/mise",
      "<root>/state/fleets/payments/mise",
      "<root>/data/mise",
      "<root>/state/fleets/payments/crews/backend/agents/bob/mise.toml",
      "/tools/balerix",
      "/tools/mise",
      "<root>/state/fleets/payments/crews/backend/repo/.git/objects"
    ]
  },
  "meta": {
    "description": "generated by balerix for payments/backend/bob",
    "name": "balerix-payments-backend-bob"
  },
  "network": {
    "block": false,
    "open_port": [
      7643
    ]
  },
  "platform_overrides": {
    "linux": {
      "security": {
        "signal_mode": "isolated"
      }
    },
    "macos": {
      "security": {
        "signal_mode": "isolated"
      }
    }
  },
  "security": {
    "signal_mode": "isolated"
  },
  "workdir": {
    "access": "none"
  }
}
==== payments/backend/bob launch.sh ====
#!/bin/sh
# generated by balerix — safe to run by hand
exec env -i HOME='<root>/state/fleets/payments/crews/backend/agents/bob/nono' PATH='/usr/local/bin:/usr/bin:/bin:/tools' \
  '/tools/balerix' 'agent-supervise' '--' '/tools/nono' '-s' '--log-file' '<root>/state/fleets/payments/crews/backend/agents/bob/logs/nono.log' 'run' '--profile' '<root>/state/fleets/payments/crews/backend/agents/bob/nono-profile.json' '--' '/tools/mise' 'exec' '--' 'claude' '--verbose'
